# silent_pomodoro_timer

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README-DOCKER.md  README.md  build-macos-app.sh  dev.sh  docker-compose.yml  llms.txt
.github/workflows/: release.yml
src/: app.rs  main.rs  settings.rs
